# control-de-cobros

./: .env.example  .gitignore  README.md  logica-conciliacion-pagos.md  main.py  pyproject.toml  run_all_orgs.bat
config/: settings.yaml
config/prompts/: conciliation_system.txt  few_shot_examples.json
scripts/: analizar_reviews_duplicadas_mismo_pago.py  analizar_reviews_duplicadas_visibles.py  auditar_dnis_reportados.py  cleanup_revisiones.py  clear_revisiones_sheet.py  close_duplicate_cuota_reviews.py  close_relaxed_guard_reviews.py  dedupe_reviews_mismo_pago.py  dedupe_reviews_visibles_exactas.py  exportar_reviews_no_exportadas.py  health_check_cobros.py  inspeccionar_payment_ids_duplicados.py  inspeccionar_reviews_dedupeadas.py  inspeccionar_reviews_duplicadas_en_batch.py  inspeccionar_reviews_no_exportadas.py  inspeccionar_reviews_puntuales.py  inspeccionar_run.py  investigar_dnis_criticos.py  precios_comisiones_criticas.py  reexport_revisiones.py  resolver_cluster_multi_comision_claro.py  resolver_rev_779.py  run_non60_live.py  run_pipeline_only.py  verify_residuals.py
scripts/estado_administrativo/: actualizar_estado.py  inspeccionar_comisiones_non60.py
src/: __init__.py
src/agent/: __init__.py  decision_engine.py
src/comparator/: __init__.py  diff_engine.py  scorer.py  sheet_reconciler.py
src/connectors/: __init__.py  sheets.py  sqlserver.py
src/context/: __init__.py  context_manager.py  schema.sql
src/models/: __init__.py  pipeline.py  sheet.py  source.py
src/observability/: __init__.py  logger.py
src/orchestrator/: pipeline.py
src/reviews/: __init__.py  review_manager.py
src/rules/: __init__.py  allocation_engine.py  conciliator.py  mappers.py  normalizer.py  (+1 more)
tests/: conftest.py
(+21 files in other folders)
