[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-hoja-cobros"
version = "0.1.0"
description = "Payment reconciliation agent between SQL Server and Google Sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "pyodbc",
  "gspread",
  "google-auth",
  "openai",
  "pyyaml",
  "click",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
