[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-hoja-cobros"
version = "0.1.0"
description = "Payment reconciliation agent between SQL Server and Google Sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic==2.13.4",
  "pyodbc==5.3.0",
  "gspread==6.2.1",
  "google-auth==2.52.0",
  "openai==2.36.0",
  "pyyaml==6.0.3",
  "click==8.3.3",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "ruff==0.15.12",
  "mypy==2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
